--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ cycler==0.12.1
 filelock==3.19.1
 fonttools==4.60.1
 fsspec==2025.9.0
+gensim==4.4.0
 Jinja2==3.1.6
 joblib==1.5.2
 kiwisolver==1.4.9
+langdetect==1.0.9
 MarkupSafe==2.1.5
 matplotlib==3.10.7
 mpmath==1.3.0
@@ -23,6 +25,7 @@ scipy==1.16.3
 seaborn==0.13.2
 setuptools==70.2.0
 six==1.17.0
+smart_open==7.5.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 torch==2.9.1+cu130
@@ -30,3 +33,4 @@ torchvision==0.24.1+cu130
 tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
+wrapt==2.0.1
