--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,108 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+anyio==3.7.1
+asttokens==3.0.1
+attrs==25.4.0
+bcrypt==5.0.0
+certifi==2025.11.12
+cffi==2.0.0
+chardet==3.0.4
+charset-normalizer==3.4.4
 colorama==0.4.6
+comm==0.2.3
+configobj==5.0.9
 contourpy==1.3.3
+cryptography==46.0.3
 cycler==0.12.1
+datasets==4.4.1
+debugpy==1.8.17
+decorator==5.2.1
+Deprecated==1.3.1
+dill==0.4.0
+executing==2.2.1
+fabric==3.2.2
 filelock==3.19.1
 fonttools==4.60.1
+frozenlist==1.8.0
 fsspec==2025.9.0
 gensim==4.4.0
+googletrans==4.0.0rc1
+h11==0.12.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==0.15.0
+httpx==0.23.0
+huggingface-hub==0.36.0
+hyperframe==5.2.0
+idna==2.10
+invoke==2.2.1
+ipykernel==7.1.0
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.9.1
 kiwisolver==1.4.9
 langdetect==1.0.9
+legacy-cgi==2.6.4
 MarkupSafe==2.1.5
 matplotlib==3.10.7
+matplotlib-inline==0.2.1
 mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.18
+nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.3
 packaging==25.0
 pandas==2.3.3
+paramiko==4.0.0
+parso==0.8.5
 pillow==11.3.0
+platformdirs==4.5.0
+prompt_toolkit==3.0.52
+propcache==0.4.1
+psutil==7.1.3
+pure_eval==0.2.3
+pyarrow==22.0.0
+pycparser==2.23
+Pygments==2.19.2
+PyNaCl==1.6.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+regex==2025.11.3
+requests==2.32.5
+rfc3986==1.5.0
+safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
+sentence-transformers==5.1.2
 setuptools==70.2.0
 six==1.17.0
 smart_open==7.5.0
+sniffio==1.3.1
+stack-data==0.6.3
 sympy==1.14.0
 threadpoolctl==3.6.0
+tokenizers==0.22.1
 torch==2.9.1+cu130
 torchvision==0.24.1+cu130
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.57.1
 typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.14
 wrapt==2.0.1
+xxhash==3.6.0
+yarl==1.22.0
